--- a/Vistas/P_Inicio.css
+++ b/Vistas/P_Inicio.css
@@ -7,12 +7,17 @@
 }
 
 .main-header__content__log-in {
-    width: 320px;
-    height: 50px;
+    width: 400px;
+    height: 100px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: space-between;
+}
+
+#header_btnLogIn
+{
+    width: 100px;
 }
 
 .main-header__content__div {
@@ -54,6 +59,6 @@
     font-weight: bold;
 }
 
-.pInicio__admin-opc a:hover{
+.pInicio__admin-opc:hover{
     text-decoration: underline;
 }
