--- a/Vistas/css/P_Inicio.css
+++ b/Vistas/css/P_Inicio.css
@@ -6,6 +6,11 @@
     justify-content: space-between;
 }
 
+#pInicio-h1 {
+    text-align: center;
+    font-size: 40px;
+}
+
 .main-header__content__log-in {
     width: 400px;
     height: 100px;
@@ -15,12 +20,11 @@
     justify-content: space-between;
 }
 
-#header_btnLogIn
-{
+#header_btnLogIn {
     width: 100px;
 }
 
-#header_btn_LogOut{
+#header_btn_LogOut {
     width: 100px;
 }
 
@@ -46,7 +50,8 @@
 
 .pInicio {
     padding-top: 10px;
-    height: 50vh;
+    height: auto;
+    background: #ececec;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -54,15 +59,73 @@
 }
 
 .pInicio__admin-opc {
-    height: 30px;
-    width: 300px;
-    align-self: flex-end;
-    display: flex;
-    justify-content: center;
+    margin: 0px 0px 20px 30px;
     color: #af0707;
     font-weight: bold;
 }
 
-.pInicio__admin-opc:hover{
-    text-decoration: underline;
+    .pInicio__admin-opc:hover {
+        text-decoration: underline;
+    }
+
+.JuegosDestacados__container {
+    display: flex;
+    width: 100%;
+    height: 750px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.lvJuegosDestacados-div {
+    margin: 5px 10px;
+    color: white;
+    border-radius: 5px;
+    position: relative;
+    width: 460px;
+    height: 215px;
+    border-radius: 10px;
+    box-shadow: -10px 5px 10px #a0a0a0;
+}
+
+
+.lvJuegosDestacados-div__desc {
+    padding: 10px;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    background: #1e1e21e0;
+    border-radius: inherit;
+}
+
+.lvJuegosDestacados-div__desc__precio {
+    color: #90d293;
+    display: flex;
+    justify-content: space-between;
+    width: 45%
+}
+
+.lvJuegosDestacados-div__desc h1, p {
+    margin: 0;
+}
+
+.precio_tachado {
+    text-decoration: line-through;
+    color: #c18282ae;
+}
+
+.lvJuegosDestacados-div img {
+    border-radius: inherit;
+    width: 100%;
+    height: 100%;
+}
+
+.lvJuegosDestacados-div__descto {
+    background: #409a40;
+    position: absolute;
+    top: 20px;
+    right: 0;
+    font-size: 30px;
+    width: 100px;
+    text-align: center;
 }
