--- a/Vistas/css/P_Inicio.css
+++ b/Vistas/css/P_Inicio.css
@@ -1,9 +1,36 @@
-﻿.main-header__content {
+﻿/* ESTILOS DEL MAIN HEADER */
+
+#mainHeader {
+    height: 240px;
+    width: 100%;
+    /* Le pongo un display flex para poder centrarlo verticalmente */
+    display: flex;
+    /* Al cambiar la direccion, ahora tengo que usar el justify-content para cambiar el eje vertical */
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+
+/* ESTILOS PARA EL WRAPPER DEL DIV DEL INICIO DE SESION */
+
+#mainHeader__content {
+    height: 130px;
     width: 100%;
     display: flex;
-    flex-direction: row;
-    padding: 20px 10px;
-    justify-content: space-between;
+    align-items: center;
+}
+
+#li_infoUsuario {
+    color: #a282ab;
+}
+
+.main-header__content__log-in {
+    margin-left: 50px;
+    width: 450px;
+    height: 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 #pInicio-h1 {
@@ -11,14 +38,24 @@
     font-size: 40px;
 }
 
-.main-header__content__log-in {
-    width: 400px;
-    height: 100px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: space-between;
+.header-botones {
+    width: 260px;
 }
+
+    .header-botones a {
+        color: #7f7fd4;
+        text-decoration: underline
+    }
+
+    .header-botones input[type=submit] {
+        background: #2d418c;
+        border: none;
+        border-radius: 9px;
+        padding: 3px;
+        color: white;
+        cursor: pointer;
+    }
+
 
 #header_btnLogIn {
     width: 100px;
@@ -33,19 +70,9 @@
     justify-content: space-between;
 }
 
-    .main-header__content__div p {
-        margin: 0;
-    }
-
-.main-header__content__search {
-    width: 320px;
-    display: flex;
-    align-self: flex-start;
-    justify-content: space-between;
-}
-
-    .main-header__content__search p {
-        margin: 0;
+    .main-header__content__div span {
+        width: 115px;
+        height: 20px;
     }
 
 .pInicio {
@@ -88,7 +115,6 @@
     box-shadow: -10px 5px 10px #a0a0a0;
 }
 
-
 .lvJuegosDestacados-div__desc {
     padding: 10px;
     position: absolute;
@@ -114,7 +140,7 @@
     color: #c18282ae;
 }
 
-.lvJuegosDestacados-div img {
+.lvJuegosDestacados-div input[type=image] {
     border-radius: inherit;
     width: 100%;
     height: 100%;
