--- a/Vistas/css/P_Inicio.css
+++ b/Vistas/css/P_Inicio.css
@@ -98,10 +98,15 @@
 .JuegosDestacados__container {
     display: flex;
     width: 100%;
-    height: 750px;
+    min-height: 750px;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+}
+
+body{
+    background: url(/recursos//b9c8f893c9a782033a01f47e0c0b1d6e.png) center center fixed no-repeat;
+    background-size: cover;
 }
 
 .lvJuegosDestacados-div {
@@ -131,6 +136,7 @@
     width: 45%
 }
 
+   
 .lvJuegosDestacados-div__desc h1, p {
     margin: 0;
 }
@@ -154,4 +160,15 @@
     font-size: 30px;
     width: 100px;
     text-align: center;
+}
+
+
+
+#tbPrueba {
+    width: 100%;
+    border-radius: 10px;
+    padding-left: 10px;
+    outline: none;
+    border: 2px solid #6c7598;
+    height: 22px;
 }
