--- a/Vistas/css/P_Inicio.css
+++ b/Vistas/css/P_Inicio.css
@@ -10,6 +10,36 @@
     justify-content: space-around;
 }
 
+.pInicio__aside {
+    display: inline-block;
+    position: absolute;
+    top: 420px;
+    left: 20px;
+    background: #3a3a3a87;
+    width: 250px;
+    color: #ffffff;
+    text-align: center;
+}
+
+#cbl_Categorias {
+    margin: 0;
+    width: 100%;
+    padding: 30px 0;
+}
+
+    #cbl_Categorias tr td {
+        display: flex;
+        justify-content: center;
+    }
+
+        #cbl_Categorias tr td input {
+            margin-right: 20px;
+        }
+
+        #cbl_Categorias tr td label {
+            width: 162px;
+            text-align: left;
+        }
 
 /* ESTILOS PARA EL WRAPPER DEL DIV DEL INICIO DE SESION */
 
@@ -36,6 +66,10 @@
 #pInicio-h1 {
     text-align: center;
     font-size: 40px;
+    margin: 0;
+    background: #1d1d1d;
+    color: #eccdf9;
+    padding: 20px;
 }
 
 .header-botones {
@@ -76,13 +110,13 @@
     }
 
 .pInicio {
-    padding-top: 10px;
     height: auto;
-    background: #ececec;
-    width: 100%;
+    background: #3a3a3a87;
+    width: 70%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin: 0 auto;
 }
 
 .pInicio__admin-opc {
@@ -98,13 +132,13 @@
 .JuegosDestacados__container {
     display: flex;
     width: 100%;
-    min-height: 750px;
+    min-height: 1100px;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
 }
 
-body{
+body {
     background: url(/recursos//b9c8f893c9a782033a01f47e0c0b1d6e.png) center center fixed no-repeat;
     background-size: cover;
 }
@@ -117,7 +151,7 @@ body{
     width: 460px;
     height: 215px;
     border-radius: 10px;
-    box-shadow: -10px 5px 10px #a0a0a0;
+    box-shadow: 11px 16px 13px 3px #131313;
 }
 
 .lvJuegosDestacados-div__desc {
@@ -136,7 +170,7 @@ body{
     width: 45%
 }
 
-   
+
 .lvJuegosDestacados-div__desc h1, p {
     margin: 0;
 }
@@ -161,7 +195,6 @@ body{
     width: 100px;
     text-align: center;
 }
-
 
 
 #tbPrueba {
