--- a/Vistas/css/Estilos.css
+++ b/Vistas/css/Estilos.css
@@ -1,9 +1,14 @@
 ﻿@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;1,300;1,500;1,700&display=swap');
 
+body {
+    background: url(/recursos//b9c8f893c9a782033a01f47e0c0b1d6e.png) center center fixed no-repeat;
+    background-size: cover;
+}
+
 /* ESTILOS EN GENERAL */
 
 .default-header {
-    height: 100px;
+    height: 150px;
     width: 100%;
     /* Le pongo un display flex para poder centrarlo verticalmente */
     display: flex;
@@ -21,6 +26,7 @@
 }
 
 
+
 .AgregarJuegos__div p {
     margin: 0;
 }
@@ -32,17 +38,11 @@
 body {
     margin: 0;
     font-family: 'Rubik', sans-serif;
-    background: url(/recursos/fondo2.jpg) center center fixed;
-    background-size: cover;
 }
 
 ul {
     list-style: none;
     padding: 0;
-}
-
-h1 {
-    margin: 0;
 }
 
 p {
@@ -70,11 +70,11 @@ a {
 }
 
     .nav-menu__li__carrito a:hover {
-        animation: slideright 3s ease forwards infinite;
+        animation: AnimacionCarrito 3s ease forwards infinite;
         animation-iteration-count: 1;
     }
 
-@keyframes slideright {
+@keyframes AnimacionCarrito {
     0% {
         transform: translateX(0px);
     }
@@ -93,45 +93,49 @@ a {
 
 .nav-menu__ul {
     border-radius: 100px;
-    box-shadow: 0px 0px 10px #3b3240;
+    box-shadow: 0px 0px 20px #3e3e3e;
     width: 100%;
-    height: 51px;
+    height: 50px;
     /* COLORES */
-    background: #484848;
-    color: #dec4ea;
+    background: #1d1d1d;
+    font-size: 17px;
     /* TEXTO */
-    font-size: 20px;
-    font-weight: bolder;
-    text-align: center;
+    font-weight: 500;
     text-transform: uppercase;
     /* DISPLAY */
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-around;
     align-items: center;
-    margin: 0px;
+    margin: 0;
+}
+
+    .nav-menu__ul li {
+        width: 160px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        color: #bbbbbb;
+    }
+
+    .nav-menu__ul a:hover {
+        text-decoration: underline;
+    }
+
+.section-div p {
+    margin-bottom: 0;
+}
+
+.section-div input {
+    margin-bottom: 15px;
 }
 
 
-    .nav-menu__ul a {
-        position: relative;
-        display: inline-block;
-        padding: 15px 15px;
-        text-decoration: none;
-        overflow: hidden;
-        transition: 0.1s;
-    }
-
-        .nav-menu__ul a:hover {
-            text-decoration: none;
-            transition-delay: 0.9s;
-        }
-
-
-    .nav-menu__ul span {
-        position: absolute;
-        display: block;
-    }
+.nav-menu__ul span {
+    position: absolute;
+    display: block;
+}
 
 #nav-menu__span1 {
     top: 0;
@@ -248,13 +252,13 @@ a {
     }
 }
 
-    .nav-menu__ul li {
-        width: 160px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-    }
+.nav-menu__ul li {
+    width: 160px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
 
 .section-div {
     position: relative;
@@ -274,7 +278,8 @@ a {
         margin-bottom: 15px;
     }
 
-.seleccionado {
+/*
+    .seleccionado {
     background: #0f7294;
     padding: 5px;
     border-radius: 30px;
@@ -282,6 +287,7 @@ a {
     border: #0f7294 3px solid;
     box-shadow: inset 0px 0px 0px 2px #ffffff;
 }
+*/
 
 #section-h1__registro {
     display: inline-block;
@@ -331,10 +337,29 @@ a {
     height: 35px;
 }
 
-    .Cuadro_Registro input[type="submit"]:hover {
-        cursor: pointer;
-        box-shadow: 0px 0px 20px #3b3240;
-        font-size: 15px
-    }
+.Cuadro_Registro input[type="submit"]:hover {
+    cursor: pointer;
+    box-shadow: 0px 0px 20px #3b3240;
+    font-size: 15px
+}
 
 
+footer {
+    background: #1f1f1f;
+    padding: 20px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.footer-div {
+    width: 300px;
+}
+
+.footer-div h4 {
+    color: #bbbbbb;
+    margin: 20px 0px 30px 0px;
+}
+
+.footer-div p, li {
+    color: #7b7b7b;
+}
