--- a/Vistas/css/P_Inicio.css
+++ b/Vistas/css/P_Inicio.css
@@ -25,19 +25,19 @@ aside {
     padding: 30px 0;
 }
 
-#cbl_Categorias tr td {
-    display: flex;
-    justify-content: center;
-}
+    #cbl_Categorias tr td {
+        display: flex;
+        justify-content: center;
+    }
 
-#cbl_Categorias tr td input {
-    margin-right: 20px;
-}
+        #cbl_Categorias tr td input {
+            margin-right: 20px;
+        }
 
-#cbl_Categorias tr td label {
-    width: 162px;
-    text-align: left;
-}
+        #cbl_Categorias tr td label {
+            width: 162px;
+            text-align: left;
+        }
 
 /* ESTILOS PARA EL WRAPPER DEL DIV DEL INICIO DE SESION */
 
@@ -48,7 +48,7 @@ aside {
 }
 
 #li_infoUsuario {
-    color: #a282ab;
+    color: #768dff;
 }
 
 .main-header__content__log-in {
@@ -78,19 +78,19 @@ aside {
     width: 260px;
 }
 
-.header-botones a {
-    color: #7f7fd4;
-    text-decoration: underline
-}
+    .header-botones a {
+        color: #7f7fd4;
+        text-decoration: underline
+    }
 
-.header-botones input[type=submit] {
-    background: #2d418c;
-    border: none;
-    border-radius: 9px;
-    padding: 3px;
-    color: white;
-    cursor: pointer;
-}
+    .header-botones input[type=submit] {
+        background: #2d418c;
+        border: none;
+        border-radius: 9px;
+        padding: 3px;
+        color: white;
+        cursor: pointer;
+    }
 
 
 #header_btnLogIn {
@@ -106,10 +106,10 @@ aside {
     justify-content: space-between;
 }
 
-.main-header__content__div span {
-    width: 115px;
-    height: 20px;
-}
+    .main-header__content__div span {
+        width: 115px;
+        height: 20px;
+    }
 
 
 /* SECTION  --------------- */
@@ -143,9 +143,9 @@ section {
     text-align: center;
 }
 
-.pInicio__admin-opc:hover {
-    text-decoration: underline;
-}
+    .pInicio__admin-opc:hover {
+        text-decoration: underline;
+    }
 
 .JuegosDestacados__container {
     margin: 50px 0px;
@@ -155,11 +155,6 @@ section {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-}
-
-body {
-    background: url(/recursos//b9c8f893c9a782033a01f47e0c0b1d6e.png) center center fixed no-repeat;
-    background-size: cover;
 }
 
 /* CADA TARJETA DE LOS JUEGOS DESTACADOS */
@@ -175,22 +170,22 @@ body {
 }
 
 
-.lvJuegosDestacados-div input[type=image] {
-    border-radius: inherit;
-    width: 100%;
-    height: 100%;
-}
+    .lvJuegosDestacados-div input[type=image] {
+        border-radius: inherit;
+        width: 100%;
+        height: 100%;
+    }
 
 
 @media only screen and (max-width: 768px) {
-.lvJuegosDestacados-div {
-    width: 400px;
-    margin: 20px 10px;
-}
+    .lvJuegosDestacados-div {
+        width: 400px;
+        margin: 20px 10px;
+    }
 
-.lvJuegosDestacados-div input[type=image] {
-    width: 400px;
-}
+        .lvJuegosDestacados-div input[type=image] {
+            width: 400px;
+        }
 }
 
 
@@ -255,11 +250,11 @@ body {
 }
 
 
-.lvListCat__div .imgAnimated {
-    width: 100%;
-    height: 100%;
-    border-radius: inherit;
-}
+    .lvListCat__div .imgAnimated {
+        width: 100%;
+        height: 100%;
+        border-radius: inherit;
+    }
 
 .lvListCat__div__info {
     position: absolute;
@@ -287,15 +282,15 @@ body {
     border-radius: 15px;
 }
 
-/* EL SIGNO DE DOLAR PARA EL PRECIO */
+    /* EL SIGNO DE DOLAR PARA EL PRECIO */
 
-.infoPrecio_lv::before {
-    content: "$ ";
-}
+    .infoPrecio_lv::before {
+        content: "$ ";
+    }
 
-.infoPrecio_lv::after {
-    content: " USD";
-}
+    .infoPrecio_lv::after {
+        content: " USD";
+    }
 
 /* ANIMACIONES CUANDO PASAS EL MOUSE POR LA CARTA */
 
@@ -307,13 +302,13 @@ body {
 }
 
 
-.lvListCat__div:hover .lvListCat__div__info {
-    display: flex;
-    top: 30%;
-    transition: all 0.2s ease-in-out;
-    flex-direction: column;
-    align-items: center;
-}
+    .lvListCat__div:hover .lvListCat__div__info {
+        display: flex;
+        top: 30%;
+        transition: all 0.2s ease-in-out;
+        flex-direction: column;
+        align-items: center;
+    }
 
 .imgAnimated:hover {
     opacity: 0.5;
@@ -322,24 +317,4 @@ body {
 
 .lvListCat__div__info:hover + .imgAnimated {
     opacity: 0.5;
-}
-
-footer {
-    background: #1f1f1f;
-    padding: 20px;
-    display: flex;
-    justify-content: space-around;
-}
-
-.footer-div {
-    width: 300px;
-}
-
-.footer-div h4 {
-    color: #bbbbbb;
-    margin: 20px 0px 30px 0px;
-}
-
-.footer-div p, li {
-    color: grey;
 }
