--- a/Vistas/css/Estilos.css
+++ b/Vistas/css/Estilos.css
@@ -28,6 +28,7 @@
 .AgregarJuegos__div {
     margin: 20px 0px;
 }
+
 #li_infoUsuario {
     color: #a282ab;
 }
@@ -58,22 +59,26 @@ a {
 }
 
 .nav-menu__li__carrito i {
-    margin-right: 10px;
+    margin-left: 25px;
     font-size: 25px;
+    position: relative;
+    left: 10px;
 }
 
 .nav-menu__li__carrito a {
-    color: #0f7294;
+    color: #dec4ea;
     opacity: 0;
+    padding: 0px;
     position: absolute;
+    right: 18px;
 }
 
     .nav-menu__li__carrito a:hover {
-        animation: slideright 3s ease forwards infinite;
+        animation: AnimacionCarrito 3s ease forwards infinite;
         animation-iteration-count: 1;
     }
 
-@keyframes slideright {
+@keyframes AnimacionCarrito {
     0% {
         transform: translateX(0px);
     }
@@ -85,7 +90,7 @@ a {
 
     to {
         transform: translateX(50px);
-        color: #0f7294;
+        color: #eccdf9;
         opacity: 1;
     }
 }
@@ -111,12 +116,12 @@ a {
     margin: 0px;
 }
 
-
     .nav-menu__ul a {
+        width: 150px;
         position: relative;
         display: inline-block;
-        padding: 15px 15px;
         text-decoration: none;
+        padding: 15px 15px;
         overflow: hidden;
         transition: 0.1s;
     }
