--- a/Vistas/css/Estilos.css
+++ b/Vistas/css/Estilos.css
@@ -111,18 +111,18 @@ a {
 }
 
     .nav-menu__ul a {
-        width: 150px;
+        width: 200px;
         position: relative;
         display: inline-block;
         text-decoration: none;
-        padding: 15px 15px;
+        padding: 15px;
         overflow: hidden;
         transition: 0.1s;
     }
 
-.nav-menu__ul a:hover {
-    text-decoration: underline;
-}
+        .nav-menu__ul a:hover {
+            text-decoration: underline;
+        }
 
 .section-div p {
     margin-bottom: 0;
@@ -138,7 +138,7 @@ a {
     display: block;
 }
 
-#nav-menu__span1 {
+.nav-menu__span1 {
     top: 0;
     left: -100%;
     width: 100%;
@@ -147,13 +147,13 @@ a {
 }
 
 
-*.nav-menu__ul a:hover #nav-menu__span1 {
+*.nav-menu__ul a:hover .nav-menu__span1 {
     left: 100%;
     transition: 1s;
     animation: slideright 1.60s ease forwards infinite;
 }
 
-#nav-menu__span3 {
+.nav-menu__span3 {
     bottom: 0;
     right: -100%;
     width: 100%;
@@ -161,13 +161,13 @@ a {
     background: linear-gradient(270deg,transparent,#59afd0);
 }
 
-.nav-menu__ul a:hover #nav-menu__span3 {
+.nav-menu__ul a:hover .nav-menu__span3 {
     right: 100%;
     transition: 1s;
     animation: slideleft 1.60s ease forwards infinite;
 }
 
-#nav-menu__span2 {
+.nav-menu__span2 {
     top: -100%;
     right: 0;
     width: 2px;
@@ -175,14 +175,14 @@ a {
     background: linear-gradient(180deg,transparent,#59afd0);
 }
 
-.nav-menu__ul a:hover #nav-menu__span2 {
+.nav-menu__ul a:hover .nav-menu__span2 {
     top: 100%;
     transition: 1s;
     transition-delay: 0.25s;
     animation: slidebottom 1.60s ease forwards infinite;
 }
 
-#nav-menu__span4 {
+.nav-menu__span4 {
     bottom: -100%;
     left: 0;
     width: 2px;
@@ -190,7 +190,7 @@ a {
     background: linear-gradient(360deg,transparent,#59afd0);
 }
 
-.nav-menu__ul a:hover #nav-menu__span4 {
+.nav-menu__ul a:hover .nav-menu__span4 {
     bottom: 100%;
     transition: 1s;
     transition-delay: 0.25s;
@@ -261,103 +261,32 @@ a {
     position: relative;
 }
 
-.section-div {
-    position: relative;
-    left: 6%;
-    top: 0px;
-}
 
-.section-div:nth-child(8) {
-    height: 120px;
-}
-
-.section-div p {
-    margin-bottom: 0;
-}
-
-.section-div input {
-    margin-bottom: 15px;
-}
-
-.seleccionado #nav-menu__span1 {
+.seleccionado .nav-menu__span1 {
     left: 100%;
     transition: 1s;
     transition-delay: 0.25s;
     animation: slideright 1.60s ease forwards infinite;
 }
 
-.seleccionado #nav-menu__span3 {
+.seleccionado .nav-menu__span3 {
     right: 100%;
     transition: 1s;
     animation: slideleft 1.60s ease forwards infinite;
 }
 
-.seleccionado #nav-menu__span2 {
+.seleccionado .nav-menu__span2 {
     top: 100%;
     transition: 1s;
     transition-delay: 0.25s;
     animation: slidebottom 1.60s ease forwards infinite;
 }
 
-.seleccionado #nav-menu__span4 {
+.seleccionado .nav-menu__span4 {
     bottom: 100%;
     transition: 1s;
     transition-delay: 0.25s;
     animation: slidetop 1.60s ease forwards infinite;
-}
-
-#section-h1__registro {
-    display: inline-block;
-    position: relative;
-    left: 39%;
-    width: 30%;
-    color: #dec4ea;
-    margin-bottom: 9px;
-}
-
-
-
-.Cuadro_Registro {
-    padding: 30px;
-    margin: auto;
-    width: 350px;
-    height: 605px;
-    box-shadow: 0px 0px 20px #3b3240;
-    background: #3a3a3a87
-}
-
-
-
-.section-div input {
-    margin-bottom: 5px;
-}
-
-.section-div span {
-    display: block;
-    margin-bottom: 5px;
-    color: #bb5e5e;
-}
-
-
-.section-div p {
-    margin-bottom: 0px;
-    color: #dec4ea;
-}
-
-.Cuadro_Registro input[type="submit"] {
-    background: #1d1b1ba3;
-    padding: 5px;
-    border-radius: 30px;
-    margin-bottom: 20px;
-    color: #dec4ea;
-    width: 290px;
-    height: 35px;
-}
-
-.Cuadro_Registro input[type="submit"]:hover {
-    cursor: pointer;
-    box-shadow: 0px 0px 20px #3b3240;
-    font-size: 15px
 }
 
 
@@ -373,11 +302,15 @@ footer {
     width: 300px;
 }
 
-.footer-div h4 {
-    color: #bbbbbb;
-    margin: 20px 0px 30px 0px;
-}
+    .footer-div h4 {
+        color: #bbbbbb;
+        margin: 20px 0px 30px 0px;
+    }
 
-.footer-div p, li {
-    color: #7b7b7b;
+    .footer-div p, li {
+        color: #7b7b7b;
+    }
+
+#li_infoUsuario {
+    color: #768dff;
 }
