V 0.2 Verificaciones de lenght y demas de todos los txt

--- a/Vistas/css/P_OpcAdmin.css
+++ b/Vistas/css/P_OpcAdmin.css
@@ -79,3 +79,11 @@
         background: #311027;
         border-radius: 5px;
     }
+
+#lbl_key{
+    color:#311027;
+}
+
+#RequiredFieldValidator1 {
+    color: #311027;
+}
