css de descripcion, arreglos y opciones admin solo para admins

--- a/Vistas/css/P_Inicio.css
+++ b/Vistas/css/P_Inicio.css
@@ -190,6 +190,7 @@ section {
 
 
 .lvJuegosDestacados-div__desc {
+    cursor:default;
     padding: 10px;
     position: absolute;
     bottom: 0px;
