--- a/Vistas/css/P_Carrito.css
+++ b/Vistas/css/P_Carrito.css
@@ -104,3 +104,14 @@ section h1 {
     text-align: center;
     margin-top: 50px;
 }
+
+#VerCompra {
+    font-size: 25px;
+    margin-top: 20px;
+    display: none;
+    text-align: center;
+}
+
+    #VerCompra a {
+        color: Aquamarine;
+    }
