--- a/Vistas/css/P_Carrito.css
+++ b/Vistas/css/P_Carrito.css
@@ -34,7 +34,7 @@ section h1 {
     color: black;
     background: white;
     text-align: center;
-    margin: 0 auto;
+    margin: 70px auto;
 }
 
     .detalles_compra table th, td {
