--- a/Vistas/css/Estilos.css
+++ b/Vistas/css/Estilos.css
@@ -7,6 +7,10 @@ body {
     font-family: 'Rubik', sans-serif;
 }
 
+form{
+    min-height: 90vh;
+}
+
 /* ESTILOS EN GENERAL */
 
 .default-header {
